stylesheets/master.css
body {
  font-family: Arial, sans-serif;
  background: #A4CFBE;
  color: #6C6E58;
}

.more { font-size: 0.7em;}

img.right { 
  float: right;
  margin: 15px;
}

a {
  color: #3E423A;
  font-weight: bold;
}

a:visited {
  color: #6C6E58;
  font-weight: normal;
}

#wrapper {
  width: 50em;
  margin: 2em auto 0;
  padding: 0;
  background: #fff;
  -moz-border-radius: 1.5em;
  -webkit-border-radius: 1.5em;
  border-radius: 1.5em;
}

#header {
  text-transform: lowercase;
  text-align: left;
  background: #417378;
  -moz-border-radius-topleft: 1em;
  -webkit-border-top-left-radius: 1em;
  -moz-border-radius-topright: 1em;
  -webkit-border-top-right-radius: 1em;  
  border-top-left-radius: 1em;  
  border-top-right-radius: 1em;  
  padding: 1.5em;
  text-align: center;
}

#header h1 {
  font-size: 4em;
  display: inline;
  letter-spacing: -0.08em;
  color: #fff;
  font-weight: normal;
}

#header h2 {
  display: inline;
  margin-left: 0.5em;
  font-size: 1.5em;
  font-weight: normal;
  color: #F4F7D9;
}

#menu {
  background: #3E423A;
}

#menu ul {
  list-style: none;
  margin: 0;
  text-align: center;
}

#menu ul li {
  display: inline;
}

#menu ul li a {
  color: white;
  font-size: 1.3em;
  padding: 0 0.5em;
  line-height: 2.5em;  
  font-weight: normal;
}

#content {
  padding: 2em;
}

#content h2 {
  margin: 0 0 0.5em 0;
  color: black;
  font-size: 1.5em;
}

#content h2.delicious-banner{
    font-size: 1.0em;
}

#content h2.delicious-banner a{
  font-weight:bold !important;
}
#content .delicious-post a{
  color: #000000;
}

#content p {
  line-height: 140%;
  letter-spacing: -0.03em;
}

span.date {
  background: #484;
  display: block;
  padding: 0.4em 0.6em 0.3em;
  font-weight: bold;
  color: white;
  border-bottom: 3px solid #262;
  float: left;
}

div.post, div.pub {
  margin-bottom: 2em;
}

.post h1, .pub h2 {
  margin-top: 0.2em;
}

.post, .pub { color: #333; }

.post h1 a, .pub h2 a {
  text-decoration: none;
  clear: left;
  display: block;
  color: black;
  padding: 0.3em 0;
  margin: 0 0 0.2em 0;
  border-bottom: 1px dashed #dba;
  font-weight: bold;
}

.post br, .pub br { margin-bottom: 10px;}

pre {
  background: #f8f8f8;
  border: 1px solid #E7E5DC;
  border-width: 1px 0 4px 6px;
  padding: 1em;
  overflow: auto;
  color: black;
  line-height: 120%;
  font-family: "Consolas","Courier New",Courier,mono;
  font-size: 12px;
  letter-spacing: 0;
}

#footer {
  margin-bottom: 2em;
  color: #3E423A;
  font-size: 0.9em;
  padding: 0.5em;
  text-align: center;
}

.home_box {
  float: left;
  margin-bottom:15px;
}

#content .home_box h2 {
  background: #417378;
  padding: 0.3em 0.5em;
  border-bottom: 3px solid #255;
  margin-bottom: 0em;
  color: white;
}

.home_box h2 a {
  color: white;
  margin: 0 0.2em;
}

#home_left {
  width: 29em;
}

.home_right {
  width: 16em;
  margin-left: 1em;
}

.clearfix { clear: both;}

table.post-list {
  width: 100%;
  border-collapse: collapse;
}
 
table.post-list a {
  color: #262;
  font-weight: bold;
}
 
table.post-list th {
  text-align: left;
}
 
table.post-list td, table.post-list th {
  padding: 0.5em 0.3em;
  border-bottom: 1px solid #dba;
}
 
table.post-list tr:last-child td, table.post-list tr:last-child th {
  border-bottom: 0;
}
 
div.related {
  margin-bottom: 2em;
}

#footer a {
  color: #3E423A;
  font-weight: normal;
}

.home_box .post h1 a, .home_box .pub h2 a {
  font-size: 0.7em;
}

.delicious-post, .repo, #tweets li {
  background: #fff5cc;
  border: 2px solid #DDDDAA;
  padding: 0.7em 1em;
  font-size: 0.8em;
  letter-spacing: -0.03em;
  margin: 1em 1em 0 0;
  -moz-border-radius: 0.5em;
  -webkit-border-radius: 0.5em;
  border-radius: 0.5em;
}

#tweets ul{
  list-style-type:none;
  margin:0 0 1em;
  padding:0;
  color:#000000;
}

.repo, .post_summary {
  background: #fff5cc;
  border: 2px solid #dda;
  padding: 0.7em 1em;
  font-size: 0.8em;
  letter-spacing: -0.03em;
  margin: 1em 1em 0 0;
  -moz-border-radius: 0.5em;
  -webkit-border-radius: 0.5em;
  border-radius: 0.5em;
}
.repo h3, .post_summary h3 {
  margin: 0 0 0.3em 0;
}
.repo h3 a, .post_summary a {
  font-weight: bold;
  color: black;
  letter-spacing: 0;
  font-size: 1.1em;
}

#tweets li
{
  font-size: 0.9em;
}

#tweets li a {
  font-weight:normal;
  font-size: 0.7em;
}

.post_summary h3 span
{
  font-size:0.8em;
  font-weight: normal;
}

#github-projects.big .repo {
  float: left;
  width: 25.2em;
  margin: 1.2em 1em 0 0;
  display: inline-block;
  float: none;
  vertical-align: top;
}

.float-left { float: left; }
.float-right { float: right; }

a img { border: 0; }

